adds different logotypes, tentative responsive and button-styling for navmenu

--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,9 @@
     <header class="topHeader">
       <!--change sizeing of image in editing program-->
       <!--to fix centering-->
-      <img src="https://www.myh.se/assets/images/myh_logo.png" />
+      <!--<img src="https://www.myh.se/assets/images/myh_logo.png" />-->
+      <img id="biglogo" src="myh_logo_white_big_shaded.png">
+      <img id="smalllogo"src="myh_logo_white_big_shaded_small.png">
             <label for="ham-check" id="hamburger">&#9776</label>
       <input type="checkbox" name="ham-check" id="ham-check">
       <ul class="navSticky">
