--- a/templates/headerStyle.css
+++ b/templates/headerStyle.css
@@ -19,7 +19,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: darkgray;
+  background-color: black;
   position: fixed;
   width: 100vw;
   height: 75px;
@@ -70,6 +70,7 @@ body {
   color: white;
   text-decoration: none;
   padding: 0.5vw 0.8vw 0.15vw 0.8vw;
+  background: linear-gradient(150deg, black, #362e2e);
   -webkit-transition: color 0.3s ease-in-out, border-bottom 0.5s ease-in-out;
   transition: color 0.3s ease-in-out, border-bottom 0.5s ease-in-out;
   border-bottom: 3px solid transparent;
@@ -90,6 +91,10 @@ body {
 
 [type="search"] {
   height: 30px;
+}
+
+#smalllogo {
+  display: none;
 }
 
 #banner {
@@ -140,6 +145,17 @@ body {
   display: none;
 }
 
+@media only screen and (max-width: 1100px) {
+  #smalllogo {
+    display: inline-block;
+    height: 4vw;
+    width: 9.6vw;
+  }
+  #biglogo {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 930px) {
   .navSticky {
     display: none;
@@ -152,6 +168,13 @@ body {
   }
   .navSticky li {
     margin: 0.5vh;
+  }
+  #smalllogo {
+    display: none;
+  }
+  #biglogo {
+    display: inline-block;
+    width: 250px;
   }
   #hamburger {
     display: inline-block;
