--- a/templates/headerStyle.scss
+++ b/templates/headerStyle.scss
@@ -25,6 +25,8 @@ body {
     width: 15vw;
     left: 5px;
     top: 10px;
+    max-height: 70px;
+    max-width: 260px;
     /*adjust height and width*/
   }
 }
@@ -74,6 +76,7 @@ body {
   height: 30px;
 }
 #smalllogo {
+  max-height: 70px;
   display: none;
 }
 #banner {
