--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 @import url("grid.css");
 
-html {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 100%;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 100%;
 }
