--- a/css/grid.scss
+++ b/css/grid.scss
@@ -1,9 +1,10 @@
+$cols: 3;
 $grid-gap: 40px;
 $breakpoint: 999px;
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat($cols, 1fr);
 
     .col-2-3 {
         grid-column-start: 1;
@@ -13,10 +14,6 @@ $breakpoint: 999px;
 
 .grid.gap {
     grid-gap: $grid-gap;
-}
-
-.grid div {
-    border: 1px solid yellowgreen;  /* For testing */
 }
 
 @media screen and (max-width: $breakpoint) {
