finishes basic styling

--- a/templates/header.html
+++ b/templates/header.html
@@ -9,9 +9,6 @@
 
   <body>
     <header class="topHeader">
-      <!--change sizeing of image in editing program-->
-      <!--to fix centering-->
-      <!--<img src="https://www.myh.se/assets/images/myh_logo.png" />-->
       <img id="biglogo" src="myh_logo_white_big_shaded.png">
       <img id="smalllogo"src="myh_logo_white_big_shaded_small.png">
             <label for="ham-check" id="hamburger">&#9776</label>
@@ -44,7 +41,16 @@
       <button type="submit">Sök</button>
       </div>
     </div>
+    <div id="breadcrumbs">
+      <p>
+        <a href="#">Start</a>
+        <a href="#">Nästa </a>
+        <a href="#">Nästa </a>
+        <a href="#">Nästa </a>
+        <a href="#">Nästa </a>
+      </p>
+    </div>
 
-    <div class="bigbody">big body bes</div>
+    <!-- <div class="bigbody">big body bes</div> -->
   </body>
 </html>
