Added bottom margin to grid gap

--- a/css/grid.scss
+++ b/css/grid.scss
@@ -1,31 +1,29 @@
+$cols: 3;
 $grid-gap: 40px;
 $breakpoint: 999px;
 
 .grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+    display: grid;
+    grid-template-columns: repeat($cols, 1fr);
 
-  .col-2-3 {
-    grid-column-start: 1;
-    grid-column-end: 3;
-  }
+    .col-2-3 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
 }
 
 .grid.gap {
-  grid-gap: $grid-gap;
-}
-
-.grid div {
-  border: 1px solid yellowgreen; /* For testing */
+    grid-gap: $grid-gap;
+    margin-bottom: $grid-gap;
 }
 
 @media screen and (max-width: $breakpoint) {
-  .grid {
-    grid-template-columns: auto;
+    .grid {
+        grid-template-columns: auto;
 
-    .col-2-3 {
-      grid-column-start: auto;
-      grid-column-end: auto;
+        .col-2-3 {
+            grid-column-start: auto;
+            grid-column-end: auto;
+        }
     }
-  }
 }
