--- a/index/style.css
+++ b/index/style.css
@@ -1,22 +1,71 @@
-.current-events {
+article {
+  display: flex;
+  flex-direction: column;
+  min-height: 200px;
+  border: 1px solid rgb(197, 197, 197);
+  margin: 0.5em;
+  padding: 1em;
+  width: 90%;
+}
+/* article h4 {
+  font-size: 1.2em;
+} */
+article span {
+  margin-top: auto;
+}
+.current-events > section {
+  /* THIS IS THE POSTS GRID, SHOULD BE WIDER ALSO SHOULD BE RESPONSIVE HAHA */
+  max-width: 70vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+}
+.thumbnail {
+  min-height: 100px;
+  max-height: 100px;
+  /* max-width: 80%; */
+  filter: grayscale(50%);
+  margin: 0.5em 0 1em 0;
+  z-index: 1;
+}
+/* GET THIS CENTERRED ALONG WITH OTHER CARDS NEXT? */
+/* STYLE IN A ROW WITH ICONS */
+.calendar.card {
+  max-height: 300px;
 }
 body,
 html {
   max-width: 100vw;
 }
 main {
-  width: 90vw;
+  max-width: 100vw;
   margin: 0 auto;
 }
+main.grid {
+  max-width: 100vw;
+}
 .grid .col-2-3.apply {
+  grid-column-start: 1;
   grid-column-end: 4;
   display: grid;
+  max-width: 100vw;
   grid-template-columns: repeat(3, 1fr);
 }
-
+.card {
+  margin: 1em;
+  border-radius: 7px;
+  box-shadow: 1px 1px 4px darkslategrey;
+}
 @media only screen and (max-width: 999px) {
   .grid .col-2-3.apply {
     grid-template-columns: auto;
+  }
+  .current-events.card {
+    margin: 0 2em;
+    grid-column-end: 4;
     grid-column-start: 1;
   }
+  /* .calendar.card {
+    margin-left: 37vw;
+  } */
 }
