--- a/templates/header/headerStyle.css
+++ b/templates/header/headerStyle.css
@@ -11,11 +11,6 @@ body {
   font-family: sans-serif;
 }
 
-body,
-html {
-  width: 100vw;
-}
-
 .topHeader {
   top: 0;
   left: 0;
@@ -31,6 +26,7 @@ html {
   position: fixed;
   width: 100vw;
   height: 75px;
+  z-index: 100;
 }
 
 .topHeader img {
