--- a/index/style.css
+++ b/index/style.css
@@ -2,10 +2,10 @@ article {
   display: flex;
   flex-direction: column;
   min-height: 200px;
-  border: 1px solid rgb(197, 197, 197);
+  width: 100%;
   margin: 0.5em;
   padding: 1em;
-  width: 90%;
+  align-items: center;
 }
 /* article h4 {
   font-size: 1.2em;
@@ -13,6 +13,27 @@ article {
 article span {
   margin-top: auto;
 }
+.current-events {
+  grid-column-start: 2;
+  grid-column-end: 5;
+  grid-row-start: 2;
+}
+.links {
+  grid-column-start: 2;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.otherlinks {
+  grid-column-start: 2;
+  grid-row-end: 4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .current-events > section {
   /* THIS IS THE POSTS GRID, SHOULD BE WIDER ALSO SHOULD BE RESPONSIVE HAHA */
   max-width: 70vw;
@@ -21,8 +42,8 @@ article span {
   grid-template-rows: auto;
 }
 .thumbnail {
-  min-height: 100px;
-  max-height: 100px;
+  height: 11vh;
+  width: 15vw;
   /* max-width: 80%; */
   filter: grayscale(50%);
   margin: 0.5em 0 1em 0;
@@ -31,7 +52,27 @@ article span {
 /* GET THIS CENTERRED ALONG WITH OTHER CARDS NEXT? */
 /* STYLE IN A ROW WITH ICONS */
 .calendar.card {
-  max-height: 300px;
+  grid-column-start: 1;
+  grid-row-start: 2;
+  max-height: 400px;
+}
+.calendar.card section {
+  display: flex;
+  flex-direction: column;
+}
+.month {
+  padding: 0.5em;
+}
+.month ul {
+  list-style-type: none;
+}
+.month h4 {
+  border-bottom: 2px solid black;
+  margin: 0 0 0.5em 0;
+}
+.month span {
+  font-size: 2em;
+  padding-right: 0.5em;
 }
 body,
 html {
@@ -41,8 +82,24 @@ main {
   max-width: 100vw;
   margin: 0 auto;
 }
+.grid.index {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 100px auto;
+  min-height: 100vh;
+}
 main.grid {
   max-width: 100vw;
+}
+.links > .card {
+  margin: 0.5em;
+  background-color: green;
+  color: white;
+  text-decoration: none;
+  font-size: 1.2em;
+  padding-top: 1.2em;
 }
 .grid .col-2-3.apply {
   grid-column-start: 1;
@@ -60,12 +117,56 @@ main.grid {
   .grid .col-2-3.apply {
     grid-template-columns: auto;
   }
+  /* FIX THIS */
   .current-events.card {
     margin: 0 2em;
-    grid-column-end: 4;
+  }
+  .links {
+    flex-direction: column;
     grid-column-start: 1;
+    grid-column-end: 6;
+    text-align: center;
+  }
+  .grid.index {
+    grid-template-rows: auto auto auto;
+  }
+  .current-events.card {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 3;
+  }
+  .calendar.card {
+    grid-column-start: 2;
+    grid-column-end: 5;
+  }
+  .calendar.card section {
+    flex-direction: row;
+    justify-content: center;
+  }
+  .month {
+    width: 50%;
   }
   /* .calendar.card {
     margin-left: 37vw;
   } */
+}
+
+@media only screen and (max-width: 870px) {
+  .calendar.card {
+    grid-column-start: 1;
+    grid-column-end: 6;
+  }
+  .current-events.card {
+    grid-column-start: 1;
+    grid-column-end: 6;
+  }
+  .current-events > section {
+    grid-template-columns: 1fr;
+    margin-right: 0px;
+    min-width: 80vw;
+  }
+  .thumbnail {
+    width: 100%;
+    height: 50%;
+  }
 }
