Centered hero image and smaller css changes

--- a/css/components.css
+++ b/css/components.css
@@ -36,6 +36,12 @@
 
 .share {
   background: #DB3069;
+  font-weight: bold;
+}
+
+.share .icons-row {
+  font-size: 24px;
+  float: right;
 }
 
 .post-list li {
@@ -46,7 +52,7 @@
 }
 
 .hero-img {
-  background: url(../index/bricks-2181920_1280.jpg) no-repeat fixed;
+  background: url(../index/bricks-2181920_1280.jpg) no-repeat fixed center;
   background-size: cover;
   height: 80vh;
   width: 100vw;
