--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,14 @@
   font-size: 100%;
 }
 
+body {
+    background: #EBEBD3;
+}
+
+main {
+    margin: 40px;
+}
+
 h1, h2, h3, h4, h5, h6 {
     margin-bottom: 5px;
 }
