--- a/index/style.css
+++ b/index/style.css
@@ -2,28 +2,29 @@ article {
   display: flex;
   flex-direction: column;
   min-height: 200px;
-  width: 100%;
+  max-width: 100%;
+
   margin: 0.5em;
   padding: 1em;
   align-items: center;
 }
-/* article h4 {
-  font-size: 1.2em;
-} */
+
 article span {
   margin-top: auto;
+  text-align: left;
+  width: 100%;
+}
+article h4 {
+  width: 100%;
+  text-align: left;
 }
 .current-events {
-  grid-column-start: 2;
-  grid-column-end: 5;
-  grid-row-start: 2;
+  grid-area: current;
 }
 .links {
-  grid-column-start: 2;
-  grid-column-end: 5;
-  grid-row-start: 1;
   display: flex;
   justify-content: center;
+  grid-area: links;
 }
 
 .otherlinks {
@@ -42,9 +43,8 @@ article span {
   grid-template-rows: auto;
 }
 .thumbnail {
-  height: 11vh;
-  width: 15vw;
-  /* max-width: 80%; */
+  height: 10vw;
+  width: 18vw;
   filter: grayscale(50%);
   margin: 0.5em 0 1em 0;
   z-index: 1;
@@ -52,9 +52,8 @@ article span {
 /* GET THIS CENTERRED ALONG WITH OTHER CARDS NEXT? */
 /* STYLE IN A ROW WITH ICONS */
 .calendar.card {
-  grid-column-start: 1;
-  grid-row-start: 2;
   max-height: 400px;
+  grid-area: calendar;
 }
 .calendar.card section {
   display: flex;
@@ -89,6 +88,7 @@ main {
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 100px auto;
   min-height: 100vh;
+  grid-template-areas: ". links links links ." "calendar current current current .";
 }
 main.grid {
   max-width: 100vw;
@@ -123,21 +123,11 @@ main.grid {
   }
   .links {
     flex-direction: column;
-    grid-column-start: 1;
-    grid-column-end: 6;
     text-align: center;
   }
   .grid.index {
     grid-template-rows: auto auto auto;
-  }
-  .current-events.card {
-    grid-column-start: 2;
-    grid-column-end: 5;
-    grid-row-start: 3;
-  }
-  .calendar.card {
-    grid-column-start: 2;
-    grid-column-end: 5;
+    grid-template-areas: "links links links links links" ". calendar calendar calendar ." ". current current current .";
   }
   .calendar.card section {
     flex-direction: row;
@@ -146,24 +136,20 @@ main.grid {
   .month {
     width: 50%;
   }
-  /* .calendar.card {
-    margin-left: 37vw;
-  } */
 }
 
 @media only screen and (max-width: 870px) {
-  .calendar.card {
-    grid-column-start: 1;
-    grid-column-end: 6;
-  }
-  .current-events.card {
-    grid-column-start: 1;
-    grid-column-end: 6;
-  }
   .current-events > section {
     grid-template-columns: 1fr;
     margin-right: 0px;
     min-width: 80vw;
+  }
+  .grid.index {
+    grid-template-areas: "links links links links links" "calendar calendar calendar calendar calendar" "current current current current current";
+  }
+  article {
+    width: 90%;
+    margin: 0 auto;
   }
   .thumbnail {
     width: 100%;
