--- a/index/style.css
+++ b/index/style.css
@@ -28,13 +28,20 @@ article h4 {
 }
 
 .otherlinks {
-  grid-column-start: 2;
-  grid-row-end: 4;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  flex: 1;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
-
+.otherlinks a {
+  width: 50%;
+  margin: 1em;
+  color: black;
+}
 .current-events > section {
   /* THIS IS THE POSTS GRID, SHOULD BE WIDER ALSO SHOULD BE RESPONSIVE HAHA */
   max-width: 70vw;
@@ -52,7 +59,7 @@ article h4 {
 /* GET THIS CENTERRED ALONG WITH OTHER CARDS NEXT? */
 /* STYLE IN A ROW WITH ICONS */
 .calendar.card {
-  max-height: 400px;
+  max-height: 450px;
   grid-area: calendar;
 }
 .calendar.card section {
@@ -126,7 +133,6 @@ main.grid {
     margin-left: 37vw;
   } */
 
-
   .links {
     flex-direction: column;
     text-align: center;
@@ -160,5 +166,8 @@ main.grid {
   .thumbnail {
     width: 100%;
     height: 50%;
+  }
+  .otherlinks {
+    flex-direction: column;
   }
 }
