--- a/index/style.css
+++ b/index/style.css
@@ -105,8 +105,11 @@ main.grid {
   background-color: green;
   color: white;
   text-decoration: none;
-  font-size: 1.2em;
-  padding-top: 1.2em;
+  font-size: 1em;
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .grid .col-2-3.apply {
   grid-column-start: 1;
@@ -136,6 +139,10 @@ main.grid {
   .links {
     flex-direction: column;
     text-align: center;
+    align-items: center;
+  }
+  .links > .card {
+    width: 80%;
   }
   .grid.index {
     grid-template-rows: auto auto auto;
