--- a/kontakt/style.css
+++ b/kontakt/style.css
@@ -1,62 +1,80 @@
-body{
-    text-align:center;
-    background-color:gainsboro;
+body {
+    text-align: center;
+    background-color: gainsboro;
 }
 
-section{
+.sec {
     border: 2px solid black;
-    background-color:gold;
+    background-color: yellow;
     border-radius: 5px;
-    box-shadow:4px 4px gray;
-    padding:10px;
+    box-shadow: 4px 4px gray;
+    padding: 10px;
 }
 
-.darkSec{
+.darkSec {
     color: black;
-    background-color:white;
+    background-color: white;
     margin-bottom: 1vh;
-    box-shadow:none;
-}
-
-.card{
-    border:1px solid black;
-    margin-bottom:1vh;
-    margin-top:1vh;
-    background-color:green;
+    box-shadow: none;
+    padding: 10px;
+    border: 2px solid black;
     border-radius: 5px;
-    box-shadow:4px 4px gray;
 }
 
+.card {
+    border: 1px solid black;
+    margin-bottom: 1vh;
+    margin-top: 1vh;
+    background-color: green;
+    border-radius: 5px;
+    box-shadow: 4px 4px gray;
+    padding: 15px;
+    
+}
 
+#kontaktaBild {
+    width: 30vw;
+}
 
-@media screen and (min-width:801px){
-    #map{
-        width:50vw;
-        float:left;
+@media screen and (min-width:801px) {
+    #map {
+        display: flex;
+        justify-content: center;
     }
-
     .sideSet {
-
-        display:flex;
+        display: flex;
         align-content: flex-end;
-        flex-direction:column;
-        max-width:40vw;
-        margin-top:4vh;
-
+        flex-direction: column;
+        max-width: 40vw;
+        margin-top: 4vh;
     }
-    .twoByTwo{
-        display:flex;
+    .twoByTwo {
+        display: flex;
         grid-column-start: 1;
         grid-column-end: 4;
         flex-direction: row;
         justify-content: space-evenly;
-        flex-wrap:wrap;
-        border:0px solid black;
-        
+        border: 0px solid black;
     }
-    
-    .twoByTwo section{
-            width:20vw;
-            box-shadow:4px 4px gray;
+    .twoByTwo section {
+        width: 22vw;
+        box-shadow: 4px 4px gray;
+    }
+    .card{
+        width:22vw;
+    }
+}
+    @media screen and (max-width: 800px) and (min-width: 476px) {
+       .twoByTwo section {
+            margin-bottom:1vh;
+       }
+    }
+    @media screen and (max-width: 475px) {
+        #map {
+            display: none;
+        }
+        iframe {
+            display: none;
+        }
     }
 }
