--- a/css/components.scss
+++ b/css/components.scss
@@ -17,6 +17,10 @@ $btn-font-color: #fff;
     }
 }
 
+.button.large {
+    padding: 20px;
+}
+
 .button.primary {
     background: $btn-primary;
 
@@ -62,18 +66,28 @@ $btn-font-color: #fff;
     height: 80vh;
     width: 100vw;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 
     h1 {
-        margin: 0;
+        margin: auto;
         font-size: 3.5em;
         color: #fff;
         text-align: center;
-        display: block;
         width: 100%;
     }
+}
+
+.hero-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    background: rgba(60, 60, 59, 0.7);
+    padding: 20px;
+    position: absolute;
+    top: 30vh;
+    height: 350px;
 }
 
 ul {
