--- a/templates/header/headerStyle.scss
+++ b/templates/header/headerStyle.scss
@@ -40,7 +40,7 @@ body {
   align-items: center;
   color: white;
   /*padding: 2vw;*/
-  width: 70vw;
+  width: 100vw;
   height: 75px;
 }
 
@@ -60,9 +60,8 @@ body {
     text-decoration: none;
     padding: $padding-horiz;
     margin: 0.2vw;
-    background: linear-gradient(150deg, rgb(0, 0, 0), rgb(37, 32, 32));
     transition: color 0.3s ease-in-out, border-bottom 0.5s ease-in-out;
-    border-bottom: 2px solid rgba(0, 0, 0, 1);
+  //  border-bottom: 2px solid rgba(0, 0, 0, 1);
     /*&::after {
       content: "";
       background-color: yellow;
@@ -72,13 +71,9 @@ body {
   }
   a:hover {
     color: yellow;
-    border-bottom: 2px solid yellow;
+    //border-bottom: 2px solid yellow;
     transition: color 0.3s ease-in-out, border-bottom 0.5s ease-in-out;
   }
-}
-[type="search"] {
-  height: 30px;
-  margin-bottom: 5px;
 }
 #smalllogo {
   max-height: 70px;
@@ -98,27 +93,31 @@ body {
   }
 }
 #banner {
-  display: flex;
-  width: 100vw;
   margin: 80px 0px 0px 0px;
   border-bottom: 1px solid black;
-  padding-left: 0px;
-  label {
-    margin-left: auto;
+  height: 37px;
+
+  form {
+    float: right;
+    margin: -2px 10px 0 0;
+
+    input {
+      border: 0;
+      padding: 8px;
+      width: 300px;
+    }
   }
+
   ul {
-    display: flex;
-    flex-direction: row;
-    margin-right: auto;
-    list-style-type: none;
+    display: inline;
+
+    li {
+      float: left;
+    }
     a {
       color: black;
       padding: $padding-horiz;
     }
-  }
-  button {
-    height: 30px;
-    width: 60px;
   }
 }
 .bigbody {
@@ -133,7 +132,7 @@ body {
 #ham-check {
   display: none;
 }
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1210px) {
   #smalllogo {
     display: inline-block;
     height: 4vw;
@@ -143,17 +142,16 @@ body {
     display: none;
   }
 }
-@media only screen and (max-width: 930px) {
+@media only screen and (max-width: 1072px) {
   .navSticky {
     display: none;
     color: black;
     background-color: black;
     position: absolute;
     top: 75px;
-    right: 15vw;
     height: initial;
     li {
-      margin: 0.5vh;
+      margin: 18px;
     }
   }
   #smalllogo {
@@ -174,7 +172,25 @@ body {
     display: flex;
     flex-direction: column;
   }
+}
+
+@media only screen and (max-width: 694px) {
   #banner {
-    flex-wrap: wrap;
+    height: auto;
+
+    form {
+      float: none;
+      display: block;
+      margin: 10px;
+
+      input {
+        width: 100%;
+        margin: 5px 0 5px 0
+      }
+
+      .button {
+        width: 100%;
+      }
+    }
   }
 }
