--- a/templates/share/share.css
+++ b/templates/share/share.css
@@ -4,6 +4,9 @@
   width: 50%;
   margin: 0 auto;
   font-size: 1.5em;
+  border-radius: 7px;
+  -webkit-box-shadow: 1px 1px 4px darkslategrey;
+          box-shadow: 1px 1px 4px darkslategrey;
 }
 
 .icons h4 {
