Changed .button to imline-block

--- a/css/components.css
+++ b/css/components.css
@@ -1,5 +1,6 @@
 /* Color palette https://coolors.co/1446a0-db3069-f5d547-ebebd3-3c3c3b */
 .button {
+  display: inline-block;
   background: #3C3C3B;
   color: #fff;
   text-align: center;
@@ -119,5 +120,11 @@ ul {
 .page-nav li a {
   text-decoration: none;
   color: #000;
+}
+
+@media screen and (max-width: 400px) {
+  .button {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=components.css.map */
