Added a tag to logo

--- a/templates/header/header.html
+++ b/templates/header/header.html
@@ -14,8 +14,10 @@
 
   <body>
     <header class="topHeader">
-      <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png">
-      <img id="smalllogo"src="/templates/header/myh_logo_white_big_shaded_small.png">
+      <a href="/index/index.html">
+        <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png">
+        <img id="smalllogo"src="/templates/header/myh_logo_white_big_shaded_small.png">
+      </a>
             <label for="ham-check" id="hamburger">&#9776</label>
       <input type="checkbox" name="ham-check" id="ham-check">
       <ul class="navSticky">
