--- a/css/components.scss
+++ b/css/components.scss
@@ -6,17 +6,17 @@ $btn-font-color-primary: #000;
 $btn-font-color: #fff;
 
 .button {
-    display: inline-block;
-    background: $btn-default;
-    color: $btn-font-color;
-    text-align: center;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 10px;
-
-    &:hover {
-        background: darken($color: $btn-default, $amount: 10%);
-    }
+  display: inline-block;
+  background: $btn-default;
+  color: $btn-font-color;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 10px;
+  cursor: pointer;
+  &:hover {
+    background: darken($color: $btn-default, $amount: 10%);
+  }
 }
 
 .button.large {
@@ -93,7 +93,7 @@ $btn-font-color: #fff;
   top: 30vh;
   height: 350px;
   a {
-    font-size: 2.2em;
+    font-size: 1.2em;
   }
 }
 
@@ -115,6 +115,10 @@ ul {
   }
 
   a {
+    &:hover,
+    &:active {
+      font-weight: 600;
+    }
     text-decoration: none;
     color: #000;
     // &:hover {
@@ -125,17 +129,7 @@ ul {
 }
 
 @media screen and (max-width: 400px) {
-<<<<<<< HEAD
   .button {
     width: 100%;
   }
 }
-=======
-    .button {
-        width: 100%;
-    }
-} 
-
-
-
->>>>>>> header-2
